--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.0",
+    "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~52.0.11",
